--- a/package.json
+++ b/package.json
@@ -3,16 +3,30 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"sugar": "1.4.1",
-		"websocket": "1.0.18",
-		"colors": "1.0.3",
-		"babel": "5.2.6",
-		"csv-parse":"0.0.6"
+		"websocket": "1.0.21",
+		"colors": "1.1.2",
+		"csv-parse": "0.0.6"
+	},
+	"devDependencies": {
+		"cache-swap": "~0.2.2",
+		"gulp": "~3.9.0",
+		"gulp-cache": "~0.3.0",
+		"gulp-jshint": "~1.11.2",
+		"gulp-jscs": "~2.0.0",
+		"gulp-replace": "~0.5.4",
+		"jshint-stylish": "~2.0.1",
+		"lazypipe": "~1.0.1",
+		"merge-stream": "~1.0.0",
+		"jscs": "~2.1.1"
 	},
 	"engines": {
 		"node": "> 0.10.1"
 	},
-	"engine-strict": true,
-	"scripts": {"start": "node main.js"},
+	"engineStrict": true,
+	"scripts": {
+		"start": "node main.js",
+		"test": "gulp"
+	},
 	"bin": "./main.js",
 	"repository": {
 		"type": "git",
